# inwx-dns-recordmaster

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REUSE.toml  mise.toml  poetry.lock.license  pyproject.toml  release-please-config.json  renovate.json5  uv.lock.license
.github/: release.yml
.github/actions/poetrybuild/: action.yaml
.github/actions/uvbuild/: action.yaml
.github/workflows/: publish.yaml  release-please.yaml  release-vulnerabilities.yaml  release.yaml  test.yaml
recordmaster/: __init__.py  _api.py  _config.py  _data.py  _get_records.py  _match_records.py  _sync_records.py  main.py
records/: example.com.yaml.sample  inwx-dns-recordmaster.schema.json
tests/: config.toml
tests/records/: test-mehl.mx.yaml  test-mehl.mx.yaml.changes
