# SPDX-FileCopyrightText: 2024 Max Mehl <https://mehl.mx>
#
# SPDX-License-Identifier: GPL-3.0-only

[tool.poetry]
name = "inwx-dns-recordmaster"
version = "0.2.0"
description = "Manage DNS nameserver records of INWX domains via YAML files and API requests. Lightweight, version-control ready"
authors = ["Max Mehl <mail@mehl.mx>"]
readme = "README.md"
repository = "https://github.com/mxmehl/inwx-dns-recordmaster"
keywords = ["inwx", "dns", "nameserver", "automation", "configuration-management"]
license = "GPL-3.0-only"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Topic :: Internet :: Name Service (DNS)",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: System :: Systems Administration",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
packages = [{ include = "recordmaster" }]

[tool.poetry.scripts]
inwx-dnsrm = "recordmaster.main:main"

[tool.poetry.dependencies]
python = "^3.9"
inwx-domrobot = "^3.1.0"
pyyaml = "^6.0.1"
platformdirs = "^4.2.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pylama = "^8.4.1"
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"
types-pyyaml = "^6.0.12.12"
types-toml = "^0.10.8.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# FORMATTING settings
[tool.isort]
profile = "black"

[tool.black]
line-length = 100

# MYPY settings
[tool.mypy]
files = ["recordmaster/*.py"]
