# SPDX-FileCopyrightText: 2024 Max Mehl <https://mehl.mx>
#
# SPDX-License-Identifier: GPL-3.0-only

[project]
name = "inwx-dns-recordmaster"
version = "1.0.4"
description = "Manage DNS nameserver records of INWX domains via YAML files and API requests. Lightweight, version-control ready"
authors = [{ name = "Max Mehl", email = "mail@mehl.mx" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "GPL-3.0-only"
keywords = [
    "inwx",
    "dns",
    "nameserver",
    "automation",
    "configuration-management",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Systems Administration",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "inwx-domrobot>=3.2.0,<4",
    "pyyaml>=6.0.3,<7",
    "platformdirs>=4.5.0,<5",
    "toml>=0.10.2,<0.11",
    "jsonschema>=4.25.1,<5",
]

[project.urls]
Repository = "https://github.com/mxmehl/inwx-dns-recordmaster"

[project.scripts]
inwx-dnsrm = "recordmaster.main:main"

[dependency-groups]
dev = [
    "ruff>=0.15.8",
    "ty>=0.0.27",
    "types-pyyaml>=6.0.12.20250915,<7",
    "types-toml>=0.10.8.20240310,<0.11",
    "bump-my-version>=1.2.4,<2",
    "types-jsonschema>=4.25.1.20251009,<5",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["recordmaster"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

# FORMATTING and LINTING settings
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T",
    "FBT",
    "LOG015",
    "COM812",
    "ERA001",
    "S310",
    "D205",
    "D212",
    "PTH123",
]
[tool.ruff.lint.pydocstyle]
convention = "google"

# TY settings
[tool.ty.src]
include = ["recordmaster"]

# Bump-My-Version
[tool.bumpversion]
commit = true
tag = true
sign_tags = true
allow_dirty = false
tag_name = "v{new_version}"
pre_commit_hooks = ["uv sync", "git add uv.lock"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
regex = true
search = "^version = \"{current_version}\""
replace = "version = \"{new_version}\""
